[metadata]
name = CGOL
version = 2.0.2
license = GNU v3
description = A whack Conways Game of Life implementation.
long_description = file: README.md
long_description_content_type= text/markdown
author = Neido
author_email = reg@neido.de
url = https://github.com/INeido/CGOL/
project_urls =
    Source=https://github.com/INeido/CGOL/
    Issues=https://github.com/INeido/CGOL//issues
classifiers=
    Programming Language :: Python :: 3
    Development Status :: 4 - Beta
    Intended Audience :: Science/Research
    Topic :: Games/Entertainment :: Simulation
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Operating System :: OS Independent
    Natural Language :: English

[options]
python_requires = >=3.6
include_package_data = True
packages = find:
package_dir =
    =src
install_requires =
   argparse
   pygame
   numpy

[options.packages.find]
where=src

[options.extras_require]
test =
    pytest>=6.2.0
docs =
    sphinx >= 1.6.5,!=1.8.0,!=3.1.0,!=3.1.1,!=5.2.0,!=5.2.0.post0
    sphinx_rtd_theme